# procpp

./: .editorconfig  .gitmodules  CMakeLists.txt  notes.md
bindings/: CMakeLists.txt  blank.cc
bindings/bindings/: format.h
crash_course/: CMakeLists.txt  employee.h  main.cc
employee_records_system/: CMakeLists.txt  database.cc  database.h  database_test.cc  employee.cc  employee.h  employee_test.cc  main.cc
strings_practice/: CMakeLists.txt  format_numbers.cc  haystack.cc  main.cc  sort_words.cc
